# MinifyAi

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  my.min.py  my.py  pyproject.toml  test.py
minifykit/: __init__.py  cli.py
minifykit/core/: __init__.py  languages.py
minifykit/core/actions/: __init__.py  base.py  basic_actions.py  factory.py
minifykit/file/: __init__.py  job.py  processor.py
minifykit/project/: __init__.py  minify.py  registry.py
tests/: __init__.py  test_core_actions.py  test_core_factory.py  test_core_languages.py  test_file_job.py  test_file_processor.py  test_project_minifier.py
